--- a/styles.less
+++ b/styles.less
@@ -101,7 +101,7 @@ body {
 .presentacion {
     width: @presentacion-width;
     height: 100vh;
-    background-image: url('/caroline-sada.jpg');
+    background-image: url('/img/caroline-sada.jpg');
     background-size: cover;
     background-position: center;
     display: flex;
