--- a/styles.css
+++ b/styles.css
@@ -1,156 +1,33 @@
-body {
-  display: flex;
-  flex-direction: row;
-  margin: 0;
-  padding: 0;
-}
-.contenido {
-  display: flex;
-  flex-direction: column;
-  justify-content: space-between;
-  height: calc(100vh - 60px * 2);
-  width: calc(100% - 60px * 2);
-  padding: 60px;
-}
-.contenido .encabezado .titulo {
-  font-size: 5vh;
-  margin: 0;
-  padding: 0;
-  text-align: center;
-}
-.contenido .encabezado .subtitulo {
-  text-align: center;
-  font-weight: normal;
-  font-size: 3vh;
-}
-.contenido .beneficios {
-  display: flex;
-  flex-direction: row;
-  justify-content: space-between;
-  word-wrap: break-word;
-}
-.contenido .beneficios .beneficio-item {
-  margin: 10px;
-  min-width: 150px;
-  display: flex;
-  flex-direction: column;
-  justify-content: flex-start;
-  align-items: center;
-}
-.contenido .beneficios .beneficio-item .imagen-beneficio {
-  height: 60px;
-  width: 60px;
-}
-.contenido .beneficios .beneficio-item p {
-  font-size: 2.5vh;
-  text-align: center;
-}
-.contenido .llamada-accion {
-  display: flex;
-  justify-content: center;
-}
-.contenido .llamada-accion div p {
-  font-size: 3vh;
-  margin-bottom: 10px;
-}
-.contenido .llamada-accion div div input {
-  padding: 5px 10px;
-  font-size: 2.1vh;
-  min-width: 250px;
-}
-.contenido .llamada-accion div div button {
-  text-align: center;
-  padding: 5px 10px;
-  font-size: 2.5vh;
-  background-color: #FFA500;
-  border: none;
-}
-.contenido .llamada-accion div div button:hover {
-  background-color: #FFD700;
-  cursor: pointer;
-}
-.contenido .llamada-accion div div button:active {
-  background-color: #FF8C00;
-}
-.presentacion {
-  width: 60%;
-  height: 100vh;
-  background-image: url('/img/caroline-sada.jpg');
-  background-size: cover;
-  background-position: center;
-  display: flex;
-  flex-direction: column;
-  justify-content: flex-end;
-  align-items: center;
-}
-.presentacion .fondo-opaco {
-  background-color: rgba(217, 217, 217, 0.6);
-  width: 100%;
-}
-.presentacion .fondo-opaco p {
-  color: black;
-  font-size: 2.2vh;
-  text-align: left;
-  padding: 0px 40px;
-  margin: 20px 0px 10px 0px;
-}
-.presentacion .fondo-opaco .redes-sociales {
-  display: flex;
-  align-items: center;
-  justify-content: flex-end;
-  margin: 0px 20px 20px 0px;
-}
-.presentacion .fondo-opaco .redes-sociales a {
-  margin: 0 6px;
-  text-decoration: none;
-}
-.presentacion .fondo-opaco .redes-sociales a svg {
+svg {
   width: 30px;
   height: 30px;
 }
+.beneficio-img {
+  height: 60px;
+  width: 60px;
+}
+.beneficio-max-width {
+  max-width: 210px;
+}
+.bg-white-opacity {
+  background-color: rgba(217, 217, 217, 0.6);
+}
+.img-presentacion {
+  background-image: url('/img/caroline-sada.jpg');
+  background-size: cover;
+  background-position: center;
+}
+#subscribe {
+  min-width: 250px;
+}
 @media screen and (max-width: 1024px) {
-  body {
-    flex-direction: column;
+  #form-subscribe {
+    text-align: center !important;
   }
-  .contenido {
-    height: auto;
-    width: 60px/2;
+  #form-subscribe .input-subscribe {
+    text-align: center !important;
   }
-  .contenido .encabezado .titulo {
-    font-size: 4vh;
-  }
-  .contenido .encabezado .subtitulo {
-    font-size: 2.5vh;
-  }
-  .contenido .beneficios {
-    flex-direction: column;
-    justify-content: flex-start;
-  }
-  .contenido .beneficios .beneficio-item {
-    margin: 0px;
-  }
-  .contenido .llamada-accion {
-    text-align: center;
-  }
-  .contenido .llamada-accion div p {
-    font-size: 2.5vh;
-  }
-  .contenido .llamada-accion div div input {
-    text-align: center;
+  #form-subscribe .button-subscribe {
     width: 100%;
-    box-sizing: border-box;
-  }
-  .contenido .llamada-accion div div button {
-    margin-top: 10px;
-    width: 100%;
-  }
-  .presentacion {
-    width: 100%;
-    height: 50vh;
-    background-position: unset;
-  }
-  .presentacion .fondo-opaco .redes-sociales a svg {
-    width: 20px;
-    height: 20px;
   }
 }
