--- a/styles.less
+++ b/styles.less
@@ -1,216 +1,41 @@
-// Variables
-@pie-width: 9%;
-@presentacion-width: 60%;
-@contenido-padding: 60px;
-
-body {
-    display: flex;
-    flex-direction: row;
-    margin: 0;
-    padding: 0;
+svg {
+    width: 30px;
+    height: 30px;
 }
 
-.contenido {
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-    height: calc(100vh - @contenido-padding * 2);
-    width: calc(100% - @contenido-padding * 2);
-    padding: @contenido-padding;
-
-    .encabezado {
-        .titulo {
-            font-size: 5vh;
-            margin: 0;
-            padding: 0;
-            text-align: center;
-        }
-
-        .subtitulo {
-            text-align: center;
-            font-weight: normal;
-            font-size: 3vh;
-        }
-    }
-
-    .beneficios {
-        display: flex;
-        flex-direction: row;
-        justify-content: space-between;
-        word-wrap: break-word;
-
-        .beneficio-item {
-            margin: 10px;
-            min-width: 150px;
-            display: flex;
-            flex-direction: column;
-            justify-content: flex-start;
-            align-items: center;
-
-            .imagen-beneficio {
-                height: 60px;
-                width: 60px;
-            }
-
-            p {
-                font-size: 2.5vh;
-                text-align: center;
-            }
-        }
-    }
-
-    .llamada-accion {
-        display: flex;
-        justify-content: center;
-
-        div {
-            p {
-                font-size: 3vh;
-                margin-bottom: 10px;
-            }
-
-            div {
-                input {
-                    padding: 5px 10px;
-                    font-size: 2.1vh;
-                    min-width: 250px;
-                }
-
-                button {
-                    text-align: center;
-                    padding: 5px 10px;
-                    font-size: 2.5vh;
-                    background-color: #FFA500;
-                    border: none;
-                }
-
-                button:hover {
-                    background-color: #FFD700;
-                    cursor: pointer;
-                }
-
-                button:active {
-                    background-color: #FF8C00;
-                }
-            }
-        }
-    }
+.beneficio-img {
+    height: 60px;
+    width: 60px;
 }
 
+.beneficio-max-width {
+    max-width: 210px;
+}
 
-.presentacion {
-    width: @presentacion-width;
-    height: 100vh;
+.bg-white-opacity {
+    background-color: rgba(217, 217, 217, 0.6);
+}
+
+.img-presentacion {
     background-image: url('/img/caroline-sada.jpg');
     background-size: cover;
     background-position: center;
-    display: flex;
-    flex-direction: column;
-    justify-content: flex-end;
-    align-items: center;
-
-    .fondo-opaco {
-        background-color: rgba(217, 217, 217, 0.6);
-        width: 100%;
-
-        p {
-            color: black;
-            font-size: 2.2vh;
-            text-align: left;
-
-            padding: 0px 40px;
-            margin: 20px 0px 10px 0px;
-        }
-
-        .redes-sociales {
-            display: flex;
-            align-items: center;
-            justify-content: flex-end;
-
-            margin: 0px 20px 20px 0px;
-
-            a {
-                margin: 0 6px;
-                text-decoration: none;
-
-                svg {
-                    width: 30px;
-                    height: 30px;
-                }
-            }
-        }
-    }
 }
 
-// Media queries para pantallas de 1024px o menos
+#subscribe {
+    min-width: 250px;
+}
+
 @media screen and (max-width: 1024px) {
-    body {
-        flex-direction: column;
-    }
+    #form-subscribe {
+        text-align: center !important;
 
-    .contenido {
-        height: auto;
-        width: @contenido-padding/2;
-
-        .encabezado {
-            .titulo {
-                font-size: 4vh;
-            }
-
-            .subtitulo {
-                font-size: 2.5vh;
-            }
+        .input-subscribe {
+            text-align: center !important;
         }
 
-        .beneficios {
-            flex-direction: column;
-            justify-content: flex-start;
-
-
-            .beneficio-item {
-                margin: 0px;
-            }
-        }
-
-        .llamada-accion {
-            text-align: center;
-
-            div {
-
-                p {
-                    font-size: 2.5vh;
-                }
-
-                div {
-                    input {
-                        text-align: center;
-                        width: 100%;
-                        box-sizing: border-box;
-                    }
-
-                    button {
-                        margin-top: 10px;
-                        width: 100%;
-                    }
-                }
-            }
-        }
-    }
-
-    .presentacion {
-        width: 100%;
-        height: 50vh;
-        background-position: unset;
-
-        .fondo-opaco {
-            .redes-sociales {
-                a {
-                    svg {
-                        width: 20px;
-                        height: 20px;
-                    }
-                }
-            }
+        .button-subscribe {
+            width: 100%;
         }
     }
 }
