--- a/styles.less
+++ b/styles.less
@@ -17,7 +17,7 @@ svg {
 }
 
 .img-presentacion {
-    background-image: url('./img/caroline-sada.jpg');
+    background-image: url('./img/caroline-sada.webp');
     background-size: cover;
     background-position: center;
 }
